--- a/zero-dependencies/pom.xml
+++ b/zero-dependencies/pom.xml
@@ -37,8 +37,7 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>${mainClass}</mainClass>
                                     <manifestEntries>
                                         <Main-Class>${mainClass}</Main-Class>
