WIP... | Gross hack because Fabian doesn't know how to code (C) whatthecommit.com

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
     <modules>
         <module>zero-dependencies</module>
+        <module>zero-akka</module>
         <module>akka</module>
     </modules>
 
