--- a/zero-akka/pom.xml
+++ b/zero-akka/pom.xml
@@ -28,10 +28,28 @@
             <artifactId>lightbend-microprofile-reactive-streams-akka</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.5.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.13.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
+        <defaultGoal>clean test</defaultGoal>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+            </plugin>
             <plugin><!-- main + fat jar -->
                 <artifactId>maven-shade-plugin</artifactId>
                 <executions>
